@@ -2,6 +2,8 @@
 
 	* src/z80/peep.c:
 	  Fix handling of nop in z80MightRead, patch #259 by alvin.
+	* src/SDCCicode.c:
+	  Optimize comparisons of cheap variables to expensive constants.
 
 2015-01-03 Philipp Klaus Krause <pkk AT spth.de>
 
